"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2008-12-02	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-71:
	  Critical vpi-prsim.cc bug fix:
		prsim nodes that were connected to multiple Verilog node
		fanouts via $from_prsim() were not properly propagating
		value to all fanouts because the vpiHandleMap only
		registered single handles.  Fix: maintain set of handles.
	  Test case added to test/prsim/vpi/oscillator-fanout.


2008-12-01	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-70:
	  No real source revision, updated flex scripts to accommodate
		flex-2.5.35's skeleton, but running haco still crashes
		a horrible death, same as with 2.5.33.


	* HACKT-00-01-04-main-00-82-69:
	  prsim: added -D time command line option to override the
		default after delay.
	  vpi-prsim: new command $prsim_default_after(<Int>) to 
		override default after delay in co-simulation, 
		use this command *before* loading the object file.
	  Documented, and tested.


2008-11-29	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-68:
	  prsim/vpi fix: prsim_sync command is now deprecated, 
		every $prsim_cmd automatically performs queue
		synchronization conservatively, relieving the user
		of the burden of having to manually prsim_sync
		around commands that modify the event_queue.  
		One test cases fixed, others updated to remove
		deprecated calls to $prsim_sync.  
	  sim/command_registry.{h,tcc}: new flag 'external_cosimulation'
		to prevent user from accidentally issuing forbidden
		commands during co-simulation, e.g. ones that advance
		the simulation time or alter breakpoints.  


2008-11-28	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-67:
	  Added production rule attributes: after_min, after_max
		which specify bounds on random delays in hacprsim.