@@ -1,6 +1,6 @@
 # "Make.test-vpi"
 #	vi: ft=automake
-#	$Id: Make.test-vpi,v 1.5 2008/12/03 05:32:19 fang Exp $
+#	$Id: Make.test-vpi,v 1.6 2008/12/07 00:27:10 fang Exp $
 # This is just a portion of the Make.test-tail template included by
 # Makefile.am's in the test/ directory subtree.  
 # This depends on variables defined in Make.test-tail, and thus, 
@@ -67,9 +67,10 @@ INSTALLCHECK_PLI_FLAGS =
 
 # create simulation executable
 # '+' connects child make (vcs) to parent's jobserver
+# touch b/c incremental compilation doesn't always updated timestamp
 .v.vx:
 if HAVE_VPI
-	+$(VCS_ENV) $(VCS) $(AM_VCS_FLAGS) $(AM_VCS_VPI_FLAGS) $(AM_PLI_FLAGS) -o $@ $<
+	+$(VCS_ENV) $(VCS) $(AM_VCS_FLAGS) $(AM_VCS_VPI_FLAGS) $(AM_PLI_FLAGS) -o $@ $< && $(TOUCH) $@
 else
 	@$(ECHO) "VPI not explicitly enabled during configure."
 endif
