@@ -1,0 +1,44 @@
+# "invariant-not-X-01.prsimrc"
+# @haco@ invariant-not-X.haco-a
+
+# ACX: bugzilla 2315
+echo This test reveals a fundamental bug in the way expressions
+echo are evaluated and firings are propagated.
+echo Below we false positive reports of invariant violations
+echo due to evaluation ordering.  
+
+# echo-commands on
+invariant-fail warn
+invariant-unknown warn
+invariants .
+
+echo abcd: X -> 0
+set a 0
+set b 0
+cycle
+
+echo abcd: 0 -> 1
+set a 1
+set b 1
+cycle
+
+echo abcd: 1 -> X
+set a X
+set b X
+cycle
+
+echo abcd: X -> 1
+set a 1
+set b 1
+cycle
+
+echo abcd: 1 -> 0
+set a 0
+set b 0
+cycle
+
+echo abcd: 0 -> X
+set a X
+set b X
+cycle
+
