@@ -1,0 +1,11 @@
+// "invariant-not-X.hac"
+
+bool a, b, c, d;
+
+spec {
+	$(a | ~a)
+	$(~b | b)
+	$(c | ~c | c | ~c)
+	$(~d | d | ~d | d)
+}
+
